--- a/Electricity price forecasting for commercial dApp (LunorQuest Challenge)/Powercast(Cleaning&Merge).ipynb
+++ b/Electricity price forecasting for commercial dApp (LunorQuest Challenge)/Powercast(Cleaning&Merge).ipynb
@@ -12,9 +12,9 @@
    "metadata": {},
    "source": [
     "### Loading Datasets (Cells 11, 19–24);\r\n",
-    "Loaeds five datasets (prices, generation, consumption, forecast generation, and cross-border flows) from CSV files using pandas.\n",
-    " Specifids semicolon (`;`) as the delimiter and parsds the `Start date` column as datetime.\n",
-    " Handlds mixed data types with warnings suppressed using `low_memory=Falsey."
+    "Loads five datasets (prices, generation, consumption, forecast generation, and cross-border flows) from CSV files using pandas.\n",
+    " Specifids semicolon (`;`) as the delimiter and parses the `Start date` column as datetime.\n",
+    " Handles mixed data types with warnings suppressed using `low_memory=Falsey."
    ]
   },
   {
